# src/app/controllers/moviesController.js
@@ -1,8 +1,8 @@
 import { handleResponse, handleErrorResponse } from "../../core/helpers/responseHelper";
 import { newCategory,checkByName, getCategories} from "../../core/services/categoryService";
-import { newMovie,getMovies } from "../../core/services/movieService";
+import { newMovie,getMovies,getAMovie,deleteMovie } from "../../core/services/movieService";
 
-const addCategory=async(req,res)=>{
+export const addCategory=async(req,res)=>{
   const { name, description } = req.body;
   const newCategoryObject={
     name,
@@ -15,36 +15,76 @@ const addCategory=async(req,res)=>{
   return handleErrorResponse(res, 500, 'Unable to create a category', error,false);
 }
 
-const addMovie=async(req,res)=>{
-  const {title,category} =req.body; 
+export const addMovie=async(req,res)=>{
+  const {title,category,image,description} =req.body; 
   const categoryName= await (checkByName({name:category}));
   if(categoryName){
     const newMovieObject = {
       title,
       category_id:categoryName.id,
-      views:0
+      rating:0,
+      image,
+      description
     }
     const {movie,error}= await newMovie(newMovieObject);
     if(!error && movie){
-      return handleResponse(res, 201, "Record saved", [],true);
+      return handleResponse(res, 201, "Movie added", [],true);
     }
     return handleErrorResponse(res, 500, 'Unable to create a movie', error,false);
   }
   return handleErrorResponse(res, 404, 'category not found', [],false);
 }
-const viewCategories=async(req,res)=>{
-  const categories= await getCategories();
-  return handleResponse(res, 200, "List of categories", categories,true);
+export const viewCategories=async(req,res)=>{
+  try {
+    const categories= await getCategories();
+    return handleResponse(res, 200, "List of categories", categories,true);
+  } catch (error) {
+    return handleErrorResponse(res, 500, "couldn't fetch categories", [],false);
+  }
 }
 
-const viewMovies=async(req,res)=>{
-  const movies= await getMovies();
-  return handleResponse(res, 200, "List of movies", movies,true);
+export const viewMovies=async(req,res)=>{
+  try {
+    const movies= await getMovies();
+    return handleResponse(res, 200, "List of movies", movies,true);
+  } catch (error) {
+    return handleErrorResponse(res, 500, "couldn't fetch movies", [],false);
+  }
+}
+export const geMovieById=async(req,res)=>{
+  const { movie, error } = await getAMovie(req.params.id);
+  if (error) return handleErrorResponse(res, 500, "couldn't fetch movie", error,false);
+  if (movie === null){
+    return handleErrorResponse(res, 404, "movie not found", error,false);
+  }
+  return handleResponse(res, 200, "List of movies", movie,true);
 }
 
-export{
-  addCategory,
-  addMovie,
-  viewCategories,
-  viewMovies
-};
+export const updateMovie=async(req,res)=>{
+  const { movie } = await getAMovie(req.params.id);
+  if (movie === null) return handleErrorResponse(res, 404, "movie not found", [],false);
+  if (req.body.title) {
+    movie.title = req.body.title;
+  }
+  if (req.body.description) {
+    movie.description = req.body.description
+  }
+  if (req.body.image) {
+    movie.image = req.body.image;
+  }
+  await movie.save(); 
+  return handleResponse(res, 200, "Movie updated", [],true);
+}
+
+export const removeMovie=async(req,res)=>{
+  const { movie } = await getAMovie(req.params.id);
+  if (movie === null) return handleErrorResponse(res, 404, "movie not found", [],false);
+  const { error } = await deleteMovie(req.params.id);
+  if(error){
+    return handleErrorResponse(res, 500, "Unable to remove a movie", error,false);
+  }
+  else{
+    return handleResponse(res, 200, "Movie deleted", [],true);
+  }
+}
+
